--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 <div class="reveal">
     <div class="slides">
-        <section>Slide 1</section>
+        <section>
+            <h1>Front End world overview</h1>
+        </section>
         <section>Slide 2</section>
     </div>
 </div>
