--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@
         <section>
             <h3>Which one to choose?</h3>
             <ul>
-                <li>Project needs</li>
+                <li>Project needs/Functionality</li>
                 <li>Community</li>
-                <li>Authority</li>
-                <li>Publisher</li>
+                <li>Authority/Publisher</li>
             </ul>
         </section>
         <section>
@@ -336,6 +335,7 @@
             <h3>Useful links</h3>
             <ul>
                 <li><a href="https://www.airpair.com/js/javascript-framework-comparison">JavaScript Frameworks comparison</a></li>
+                <li><a href="http://todomvc.com/">TotoMVC implementations on different Frameworks</a></li>
             </ul>
         </section>
     </div>
