--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
             <h3>Useful links</h3>
             <ul>
                 <li><a href="http://responsive.vermilion.com/compare.php">CSS Frameworks comparison</a></li>
+                <li><a href="http://www.oreilly.com/web-platform/free/book-of-html-css-frameworks.csp">The Little Book of HTML/CSS Frameworks</a></li>
             </ul>
         </section>
         <section>
