--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
             <h3>Useful links</h3>
             <ul>
                 <li><a href="https://www.airpair.com/js/javascript-framework-comparison">JavaScript Frameworks comparison</a></li>
-                <li><a href="http://todomvc.com/">TotoMVC implementations on different Frameworks</a></li>
+                <li><a href="http://todomvc.com/">TodoMVC implementations on different Frameworks</a></li>
             </ul>
         </section>
         <section>
