update lecture to next version

--- a/index.html
+++ b/index.html
@@ -36,14 +36,47 @@
             <img src="public/src/images/bgs/not-bad.jpeg">
         </section>
         <section>
+            <h2>Future?</h2>
+        </section>
+        <section data-background="public/src/images/bgs/network-782707_960_720.png">
+            <h2>Internet of things</h2>
+        </section>
+        <section>
+            <h2>Augmented reality</h2>
+            <img src="public/src/images/bgs/ViewAR_BUTLERS_Screenshot.jpg">
+        </section>
+        <section>
+            <h2>Front-end technologies</h2>
+            <ul>
+                <li class="fragment fade-in">HTML (Hyper Text Markup Language)</li>
+                <li class="fragment fade-in">CSS(Cascading Style Sheets)</li>
+                <li class="fragment fade-in">HTTP (Hypertext Transfer Protocol)</li>
+                <li class="fragment fade-in">JavaScript</li>
+                <li class="fragment fade-in">Web APIs</li>
+            </ul>
+        </section>
+        <section>
+            <h2>How to stay up to date?</h2>
+            <ul>
+                <li>
+                    <a href="https://habrahabr.ru/search/?target_type=posts&order_by=date&q=%D0%94%D0%B0%D0%B9%D0%B4%D0%B6%D0%B5%D1%81%D1%82+%D1%81%D0%B2%D0%B5%D0%B6%D0%B8%D1%85+%D0%BC%D0%B0%D1%82%D0%B5%D1%80%D0%B8%D0%B0%D0%BB%D0%BE%D0%B2+%D0%B8%D0%B7+%D0%BC%D0%B8%D1%80%D0%B0+%D1%84%D1%80%D0%BE%D0%BD%D1%82%D0%B5%D0%BD%D0%B4%D0%B0+%D0%B7%D0%B0+%D0%BF%D0%BE%D1%81%D0%BB%D0%B5%D0%B4%D0%BD%D1%8E%D1%8E+%D0%BD%D0%B5%D0%B4%D0%B5%D0%BB%D1%8E&flow=">
+                        Дайджест свежих материалов из мира фронтенда за последнюю неделю
+                    </a>
+                </li>
+                <li>
+                    <a href="https://uptodate.frontendrescue.org/">
+                        uptodate.frontendrescue.org
+                    </a>
+                </li>
+            </ul>
+        </section>
+        <section>
             <h2>What Is a Framework?</h2>
             <ul>
                 <li class="fragment fade-in">Architecture</li>
                 <li class="fragment fade-in">Functionality</li>
                 <li class="fragment fade-in">Design patterns</li>
             </ul>
-            <!--<p>"Framework" is a broad term, often misunderstood. Conceptually, a framework in the web development sense can be likened to a library: a library of design patterns, complete with all needed functionality.</p>-->
-            <!--<p>Functionality usually means presentation (styling via CSS) and sometimes also behavior (scripting via JavaScript). The advantage of using a library is that we don’t have to code this functionality ourselves, or do so repeatedly. We instead follow the library’s instructions for the structural side (markup via HTML).</p>-->
         </section>
         <section>
             <h2>Why Frameworks?</h2>
@@ -53,6 +86,14 @@
                 <li class="fragment fade-in">Prevent errors</li>
             </ul>
             <!--<p>Frameworks promise to save both development and design time. The thinking goes that many of the things site owners and developers want have been done a thousand times, and thus there is no need to reinvent the wheel.</p>-->
+        </section>
+        <section>
+            <h2>Pitfalls of using framework</h2>
+            <ul>
+                <li class="fragment fade-in">Unnecessary functionality </li>
+                <li class="fragment fade-in">Bugs of framework become bugs of your application</li>
+                <li class="fragment fade-in">Additional time to adjust framework for requirements of your project</li>
+            </ul>
         </section>
         <section>
             <h2>Modern HTML & CSS frameworks overview</h2>
@@ -109,19 +150,12 @@
 
             <br><br><br>
 
-            <h4>with bower</h4>
-            <code class="rich-diff-level-one terminal">
-                $ bower install bootstrap
-            </code>
-
-            <br><br><br>
-
             <h4>with npm</h4>
             <code class="rich-diff-level-one terminal">
                 $ npm install bootstrap
             </code>
 
-            <br><br><br>
+            <br><br><br> <br><br><br>
 
             <h4><a href="http://getbootstrap.com/getting-started/">Download page</a></h4>
         </section>
@@ -217,6 +251,34 @@
 &lt;/<span class="pl-ent rich-diff-level-one">div</span>&gt;</pre></ins>
                 </div>
         </section>
+        <section>
+            <h3>future?</h3>
+        </section>
+        <section>
+            <h3>Bootstrap v4.0.0-alpha.3</h3>
+            <ul>
+                <li class="fragment fade-in">Dropped IE8 and iOS 6 support</li>
+                <li class="fragment fade-in">Official Android v5.0 support</li>
+                <li class="fragment fade-in">px to rem</li>
+                <li class="fragment fade-in">Less to Sass</li>
+                <li class="fragment fade-in">Flexbox</li>
+                <li class="fragment fade-in">No icons</li>
+            </ul>
+        </section>
+        <section>
+            <h3>Installation</h3>
+
+            <br><br><br>
+
+            <h4>with npm</h4>
+            <code class="rich-diff-level-one terminal">
+                $ npm install bootstrap@4.0.0-alpha.3
+            </code>
+
+            <br><br><br> <br><br><br>
+
+            <h4><a href="http://v4-alpha.getbootstrap.com/getting-started/download/">Download page</a></h4>
+        </section>
         <section data-background="public/src/images/bgs/foundation.jpg">
 
         </section>
@@ -225,17 +287,11 @@
 
             <br><br><br>
 
-            <h4>First install CLI</h4>
+            <h4>Install CLI</h4>
             <code class="rich-diff-level-one terminal">
                 $ npm install -g foundation-cli
             </code>
 
-            <br><br><br>
-
-            <h4>with bower</h4>
-            <code class="rich-diff-level-one terminal">
-                $ bower install foundation-sites
-            </code>
 
             <br><br><br>
 
@@ -339,59 +395,6 @@
             </div>
         </section>
         <section>
-            <h2>Skeleton</h2>
-        </section>
-        <section>
-            <h3>Installation</h3>
-
-            <br><br><br>
-
-            <h4><a href="http://getskeleton.com/">Download page</a></h4>
-        </section>
-        <section>
-            <h3>Features</h3>
-            <ul>
-                <li class="fragment fade-in">Dead simple</li>
-                <li class="fragment fade-in">Grid system with 960px max width</li>
-                <li class="fragment fade-in">Some UI elements</li>
-                <li class="fragment fade-in">Lightweight</li>
-            </ul>
-        </section>
-        <section>
-            <h3>Grid example</h3>
-            <div class="row">
-                <div class="eight columns">.eight</div>
-                <div class="four columns">.four</div>
-            </div>
-            <div class="row">
-                <div class="four columns">.four</div>
-                <div class="four columns">.four</div>
-                <div class="four columns">.our</div>
-            </div>
-            <div class="row">
-                <div class="six columns">.six</div>
-                <div class="six columns">.six</div>
-            </div>
-        </section>
-        <section>
-            <h3>Code</h3>
-            <div class="markdown-body">
-            <ins class="code"><pre class="rich-diff-level-zero">&lt;<span class="pl-ent rich-diff-level-one">div</span> <span class="pl-e rich-diff-level-one">class</span>=<span class="pl-s rich-diff-level-one"><span class="pl-pds">"</span>row<span class="pl-pds">"</span></span>&gt;
-    &lt;<span class="pl-ent rich-diff-level-one">div</span> <span class="pl-e rich-diff-level-one">class</span>=<span class="pl-s rich-diff-level-one"><span class="pl-pds">"</span>eight columns<span class="pl-pds">"</span></span>&gt;.eight&lt;/<span class="pl-ent rich-diff-level-one">div</span>&gt;
-    &lt;<span class="pl-ent rich-diff-level-one">div</span> <span class="pl-e rich-diff-level-one">class</span>=<span class="pl-s rich-diff-level-one"><span class="pl-pds">"</span>four columns<span class="pl-pds">"</span></span>&gt;.four&lt;/<span class="pl-ent rich-diff-level-one">div</span>&gt;
-&lt;/<span class="pl-ent rich-diff-level-one">div</span>&gt;
-&lt;<span class="pl-ent rich-diff-level-one">div</span> <span class="pl-e rich-diff-level-one">class</span>=<span class="pl-s rich-diff-level-one"><span class="pl-pds">"</span>row<span class="pl-pds">"</span></span>&gt;
-    &lt;<span class="pl-ent rich-diff-level-one">div</span> <span class="pl-e rich-diff-level-one">class</span>=<span class="pl-s rich-diff-level-one"><span class="pl-pds">"</span>four columns<span class="pl-pds">"</span></span>&gt;.four&lt;/<span class="pl-ent rich-diff-level-one">div</span>&gt;
-    &lt;<span class="pl-ent rich-diff-level-one">div</span> <span class="pl-e rich-diff-level-one">class</span>=<span class="pl-s rich-diff-level-one"><span class="pl-pds">"</span>four columns<span class="pl-pds">"</span></span>&gt;.four&lt;/<span class="pl-ent rich-diff-level-one">div</span>&gt;
-    &lt;<span class="pl-ent rich-diff-level-one">div</span> <span class="pl-e rich-diff-level-one">class</span>=<span class="pl-s rich-diff-level-one"><span class="pl-pds">"</span>four columns<span class="pl-pds">"</span></span>&gt;.our&lt;/<span class="pl-ent rich-diff-level-one">div</span>&gt;
-&lt;/<span class="pl-ent rich-diff-level-one">div</span>&gt;
-&lt;<span class="pl-ent rich-diff-level-one">div</span> <span class="pl-e rich-diff-level-one">class</span>=<span class="pl-s rich-diff-level-one"><span class="pl-pds">"</span>row<span class="pl-pds">"</span></span>&gt;
-    &lt;<span class="pl-ent rich-diff-level-one">div</span> <span class="pl-e rich-diff-level-one">class</span>=<span class="pl-s rich-diff-level-one"><span class="pl-pds">"</span>six columns<span class="pl-pds">"</span></span>&gt;.six&lt;/<span class="pl-ent rich-diff-level-one">div</span>&gt;
-    &lt;<span class="pl-ent rich-diff-level-one">div</span> <span class="pl-e rich-diff-level-one">class</span>=<span class="pl-s rich-diff-level-one"><span class="pl-pds">"</span>six columns<span class="pl-pds">"</span></span>&gt;.six&lt;/<span class="pl-ent rich-diff-level-one">div</span>&gt;
-&lt;/<span class="pl-ent rich-diff-level-one">div</span>&gt;</pre></ins>
-                </div>
-        </section>
-        <section>
             <h3>Useful links</h3>
             <ul>
                 <li><a href="http://responsive.vermilion.com/compare.php">CSS Frameworks comparison</a></li>
@@ -406,13 +409,6 @@
         </section>
         <section>
             <h3>Installation</h3>
-
-            <br><br><br>
-
-            <h4>with bower</h4>
-            <code class="rich-diff-level-one terminal">
-                $ bower install jQuery
-            </code>
 
             <br><br><br>
 
@@ -497,10 +493,9 @@
             </div>
         </section>
         <section>
-            <img src="public/src/images/bgs/nothing.jpg">
-        </section>
-        <section>
             <h3>MV* Frameworks</h3>
+            <br><br><br>
+            <a href="https://www.youtube.com/watch?v=AhyrzeU9LGI">MV* explanation</a>
         </section>
         <section>
             <img src="public/src/images/bgs/mvc.png">
@@ -510,13 +505,6 @@
         </section>
         <section>
             <h3>Installation</h3>
-
-            <br><br><br>
-
-            <h4>with bower</h4>
-            <code class="rich-diff-level-one terminal">
-                $ bower install backbone
-            </code>
 
             <br><br><br>
 
@@ -556,17 +544,17 @@
             </div>
         </section>
         <section>
+            <h3>Useful links</h3>
+            <ul>
+                <li><a href="http://backbonejs.org/#Getting-started">Getting Started</a></li>
+                <li><a href="https://www.udacity.com/course/learn-backbonejs--ud990">Learn Backbone.js</a></li>
+            </ul>
+        </section>
+        <section>
             <img src="public/src/images/js-frameworks/angular.png">
         </section>
         <section>
             <h3>Installation</h3>
-
-            <br><br><br>
-
-            <h4>with bower</h4>
-            <code class="rich-diff-level-one terminal">
-                $ bower install angular
-            </code>
 
             <br><br><br>
 
@@ -606,6 +594,29 @@
             </div>
         </section>
         <section>
+            <h3>future?</h3>
+        </section>
+        <section>
+            <h3>Angular 2.0.0-rc.5</h3>
+            <ul>
+                <li class="fragment fade-in">Mobile oriented</li>
+                <li class="fragment fade-in">Improved performance</li>
+                <li class="fragment fade-in">No $scope</li>
+                <li class="fragment fade-in">Component-Based</li>
+                <li class="fragment fade-in">RxJS</li>
+                <li class="fragment fade-in">TypeScript</li>
+                <li class="fragment fade-in">Server-side Rendering</li>
+            </ul>
+        </section>
+        <section>
+            <h3>Installation</h3>
+
+            <br><br><br>
+
+            <h4><a href="https://angular.io/docs/ts/latest/quickstart.html">Installation instruction</a></h4>
+        </section>
+
+        <section>
             <img src="public/src/images/js-frameworks/react.png">
         </section>
         <section>
@@ -621,7 +632,6 @@
                 <li class="fragment fade-in">Declarative</li>
                 <li class="fragment fade-in">JSX</li>
                 <li class="fragment fade-in">Virtual DOM</li>
-                <li class="fragment fade-in">More Lib than Framework</li>
                 <li class="fragment fade-in">Flux</li>
             </ul>
         </section>
@@ -659,6 +669,22 @@
             <ul>
                 <li><a href="https://www.airpair.com/js/javascript-framework-comparison">JavaScript Frameworks comparison</a></li>
                 <li><a href="http://todomvc.com/">TodoMVC implementations on different Frameworks</a></li>
+            </ul>
+        </section>
+        <section>
+            <h2>Homework</h2>
+            <h3>Business description</h3>
+            <p>Create registration page. When user enters page he will see short description of what he will get after registration,
+                form page with those fields: name, email, date of birth, postal index, password and password confirmation,
+                list of countries, checkbox with text "I agree with terms and conditions" and submit button.
+                All fields are required. Email, date of birth, postal index should contain valid data.
+            </p>
+            <h3>Homework requirements</h3>
+            <ul>
+                <li><b>Basic level</b>: Create page styling using <a href="http://getbootstrap.com/">bootstrap</a></li>
+                <li><b>Advanced level</b>: add form validation using AngularJS,
+                    summary of all fields is displayed under the submit button and is being updated while user types something.
+                    If some field is invalid, error is displayed under it and submit button is disabled.</li>
             </ul>
         </section>
         <section>
